# quinten_healthcare

./: Aspect Based Sentiment Analysis.ipynb  EDA.ipynb  README.md  pyproject.toml  requirements.txt
data/: sorted_feelings.csv
docs/: gen_ref_pages.py
notebooks/: Aspect Based Sentiment Analysis.ipynb  EDA.ipynb
src/: config.py
src/data_processing/: nlp_functions.py  preprocessing.py
src/plots/: EDA_plots.py  LDA_topic_modelling.py  Sentiment_analysis.py  utils.py
webapp/: DataScience_Healthcare.py
webapp/Utils/: function.py  plotting.py  styles.py
webapp/data/: raw_data_healthcare.csv  sentiment_data.csv  sentiment_data2.csv
webapp/pages/: 1_Sentiment_analysis.py  2_Thematic_Analysis.py  2_Topic_Modeling.py  3_Comment_Clustering.py  3_Secondary_Effect.py
