[tool.poetry]
name = "quinten project"
version = "0.1.0"
description = ""
authors = ["ChrisTho23 <christophe.thomassin@hec.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.4"
numpy = "^1.20.3"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
